feat: defined structs for contract package

--- a/samples/hw_collaboration/contract.yaml
+++ b/samples/hw_collaboration/contract.yaml
@@ -3,6 +3,7 @@ version: 0.1
 Purpose: Attribution of XYZ Flight Ticket. 
 collaborators: 
 	- name: Airline
+	 	contract_repo: repo_link1
 		user_agents: 
 			- name: John 
 				email: john@gmail.com 
@@ -11,11 +12,12 @@ collaborators:
 		warehouse: 
 			- name: snowflake 
 	- name: AdSense
+	 	contract_repo: repo_link2
 		user_agents: 
 			- name: Hammond
 				email: hammond@gmail.com 
 			- name: Harry
 				email: harry@gmail.com 
 		warehouse: 
-			- name: big_query 	
+			- name: bigquery 	
 compute_warehouse: snowflake 	
