--- a/samples/small_collab/contract.yaml
+++ b/samples/small_collab/contract.yaml
@@ -1,23 +1,21 @@
 name: Clean Room Contract
 version: 0.1
-Purpose: Attribution of XYZ Flight Ticket. 
-collaborators: 
-	- name: Airline
-	 	contract_repo: repo_link1
-		user_agents: 
-			- name: John 
-				email: john@gmail.com 
-			- name: Hanna
-				email: hanna@gmail.com 
-		warehouse: 
-			- name: snowflake 
-	- name: AdSense
-	 	contract_repo: repo_link2
-		user_agents: 
-			- name: Hammond
-				email: hammond@gmail.com 
-			- name: Harry
-				email: harry@gmail.com 
-		warehouse: 
-			- name: bigquery 	
-compute_warehouse: snowflake 	
+purpose: Attribution of XYZ Flight Ticket.
+collaborators:
+  - name: Airline
+    git_repo: repo_link1
+    user_agents:
+      - name: John
+        email: john@gmail.com
+      - name: Hanna
+        email: hanna@gmail.com
+    warehouse: snowflake
+  - name: AdSense
+    git_repo: repo_link2
+    user_agents:
+      - name: Hammond
+        email: hammond@gmail.com
+      - name: Harry
+        email: harry@gmail.com
+    warehouse: bigquery
+compute_warehouse: snowflake
