refactor: refactored dcr modules and implemented yaml changes

--- a/samples/init_collaboration/research_pkg/destinations.yaml
+++ b/samples/init_collaboration/research_pkg/destinations.yaml
@@ -1,5 +1,4 @@
 collaborator: Research
 destinations: 
   - name: customer_overlap_count
-    request: Media
-    transformation: /Research/transformation/private_total_customers
+    ref: /Research/transformation/private_total_customers
