--- a/samples/test_collaboration/collab1_pkg/destinations.yaml
+++ b/samples/test_collaboration/collab1_pkg/destinations.yaml
@@ -1,5 +1,4 @@
 collaborator: collab1
 destinations: 
   - name: collab1_destination
-    request: collab1
-    transformation_ref: /collab3/transformation/collab3_transformation
+    ref: /collab3/transformation/collab3_transformation
