--- a/samples/test_collaboration/collab2_pkg/destinations.yaml
+++ b/samples/test_collaboration/collab2_pkg/destinations.yaml
@@ -1,5 +1,4 @@
 collaborator: collab2
 destinations: 
   - name: collab2_destination
-    request: collab1
-    transformation_ref: /collab2/transformation/collab2_transformation
+    ref: /collab2/transformation/collab2_transformation
