--- a/samples/test_collaboration/collab3_pkg/sources.yaml
+++ b/samples/test_collaboration/collab3_pkg/sources.yaml
@@ -1,10 +1,8 @@
 collaborator: collab3 #name of collaborator 
-tables: 
+sources: 
   - name: collab3_table
     csv_location: ./collab3_location_csv.csv
     description: table having data for collab3 
-    consumers_allowed: # who is allowed to use this source in transformation
-      - collab1
     columns:
       - name: email 
         type: string
@@ -14,13 +12,13 @@ tables:
           - aggregate2
           - aggregate4  
         join_key: true # can this column be used as a join_key
-destinations_allowed: 
-  - ref: /collab1/transformation/collab3_transformation 
-    tables_allowed: 
-      - /collab1/source/collab2_table 
-    noise_parameters: 
-      - noise_parameters: 
-      - epsilon: ln3 
-      - delta: 1e-5
-      - kappa: 1
-      - threshold: between 0 and 3  
+    consumers_allowed: # who is allowed to use this source in transformation
+      - collab1
+    destinations_allowed: 
+      - ref: /collab1/transformation/collab3_transformation 
+        noise_parameters: 
+          - noise_parameters: 
+          - epsilon: ln3 
+          - delta: 1e-5
+          - kappa: 1
+          - threshold: between 0 and 3  
