feat: compile is running

--- a/samples/init_collaboration/airline_pkg/sources.yaml
+++ b/samples/init_collaboration/airline_pkg/sources.yaml
@@ -36,5 +36,6 @@ sources:
     destinations_allowed: 
       - ref: /Research/transformation/private_total_customers 
         noise_parameters: 
-          - epsilon: ln3 
+          - noiseType: Laplace
+          - epsilon: math.Log(2) 
           - maxPartitionPerUser: 1 
