feat: service module to run single transformation at a time. (#25)
* feat: running transformation without server. Not able to make a directory at the end

* feat: results getting stored on results.txt

* refactor: all pkg paths made absolute to reduce errors.

* chore: rangofmt

* chore: modified .gitignore

* feat: added output filter

--- a/.gitignore
+++ b/.gitignore
@@ -9,6 +9,13 @@
 
 dcr
 bin/
+samples/*/*/go_app/*.go
+samples/*/*/go_app/main
+results.txt
+samples/*/*/results.txt
+samples/*/*/go_app/enclave.json
+samples/*/*/go_app/private.pem
+samples/*/*/go_app/pubic.pem
 
 # Test binary, built with `go test -c`
 *.test
