feat: topological order computed. Two Test Cases added.

--- a/samples/init_collaboration/research_pkg/transformations.yaml
+++ b/samples/init_collaboration/research_pkg/transformations.yaml
@@ -15,5 +15,5 @@ transformations:
       - noiseType
       - epsilon 
       - maxPartitionsPerUser
-    consumer_allowed: 
+    consumer_allowed: # who is allowed to send its sources for this transformation
       - Media
