feat: automatic events getting filtered with authorization. TestGraph modified. Run Test yet to be added.

--- a/samples/test_graph/test_onedepth/c2_pkg/sources.yaml
+++ b/samples/test_graph/test_onedepth/c2_pkg/sources.yaml
@@ -7,6 +7,8 @@ sources:
       - name: col1 
         type: string
         masking_type: sha256
+    consumers_allowed: 
+      - c1
     destinations_allowed: 
       - ref: /c3/destination/d1
         noise_parameters: 
