--- a/samples/test_graph/test_onedepth/c1_pkg/transformations.yaml
+++ b/samples/test_graph/test_onedepth/c1_pkg/transformations.yaml
@@ -5,8 +5,8 @@ transformations:
     from: 
       - name: c3_s1_alias
         ref: /c3/source/s1 
-      - name: c3_d1_alias
-        ref: /c3/destination/d1
+      - name: c2_t1_alias
+        ref: /c2/transformation/t1
     noise_parameters: 
       - epsilon 
       - delta
