--- a/samples/test_graph/test_twodepth/c3_pkg/transformations.yaml
+++ b/samples/test_graph/test_twodepth/c3_pkg/transformations.yaml
@@ -3,10 +3,10 @@ transformations:
   - name: t1 # research/tranformation/private_total_count/output
     type: go_code
     from: 
-      - name: c2_d1_alias
-        ref: /c2/destination/d1 
-      - name: c3_d1_alias
-        ref: /c3/destination/d1
+      - name: c1_t1_alias
+        ref: /c1/transformation/t1 
+      - name: c2_t1_alias
+        ref: /c2/transformation/t1
     noise_parameters: 
       - epsilon 
       - delta
