config: renamed source consumers_allowed to transformation_owners_allowed and transformation consumers_allowed to destination_owners_allowed

--- a/samples/init_collaboration/airline_pkg/sources.yaml
+++ b/samples/init_collaboration/airline_pkg/sources.yaml
@@ -31,7 +31,7 @@ sources:
           - count
         selectable: true
         join_key: true
-    consumers_allowed: # who is allowed to write transformations on my sources. 
+    transformation_owners_allowed: # who is allowed to write transformations on my sources. 
       - Research
       - Media 
     destinations_allowed: 
