--- a/samples/test_graph/test_onedepth/c2_pkg/transformations.yaml
+++ b/samples/test_graph/test_onedepth/c2_pkg/transformations.yaml
@@ -12,5 +12,5 @@ transformations:
     noise_parameters: 
       - epsilon 
       - delta
-    consumer_allowed: 
+    destination_owners_allowed: 
       - c3
