--- a/samples/test_graph/test_twodepth/c2_pkg/transformations.yaml
+++ b/samples/test_graph/test_twodepth/c2_pkg/transformations.yaml
@@ -12,7 +12,7 @@ transformations:
     noise_parameters: 
       - epsilon 
       - delta
-    consumer_allowed: 
+    destination_owners_allowed: 
       - c1
       - c2
       - c3
