--- a/samples/test_graph/test_twodepth/c3_pkg/transformations.yaml
+++ b/samples/test_graph/test_twodepth/c3_pkg/transformations.yaml
@@ -10,5 +10,5 @@ transformations:
     noise_parameters: 
       - epsilon 
       - delta
-    consumer_allowed: 
+    destination_owners_allowed: 
       - c1
