feat: all the destinations should be computed automatically  (#31)
* feat: topological order edit

* feat: topological order computed. Two Test Cases added.

* feat: created collaboration event defintion and event status. The events yet to be authorized.

* feat: automatic events getting filtered with authorization. TestGraph modified. Run Test yet to be added.

* chore: added new diagrams for modified graph idea.

* feat: completed service module for automatic run. TestService yet to be done

* feat: refactored runCmd to take only collaboration package as input before Service Run

* test: enabled all the test cases for TestGraph

* config: renamed source consumers_allowed to transformation_owners_allowed and transformation consumers_allowed to destination_owners_allowed

* feat: service tested on intel sdk for single run

* feat: intel simulation prompt added

* docs: updated readme.md

* docs: added links on readme.md

* Update README.md

* Update README.md

---------

Co-authored-by: yuvraj <yatinangi@gmail.com>
Co-authored-by: tipped73 <92882879+tipped73@users.noreply.github.com>

--- a/samples/init_collaboration/airline_pkg/sources.yaml
+++ b/samples/init_collaboration/airline_pkg/sources.yaml
@@ -31,11 +31,11 @@ sources:
           - count
         selectable: true
         join_key: true
-    consumers_allowed: # who is allowed to write transformations on my sources. 
+    transformation_owners_allowed: # who is allowed to write transformations on my sources. 
       - Research
-      - Media  
+      - Media 
     destinations_allowed: 
-      - ref: /Research/transformation/private_total_customers 
+      - ref: /Research/destination/customer_overlap_count 
         noise_parameters: 
           - noiseType: Laplace
           - epsilon: math.Log(2) 
