--- a/samples/init_collaboration/media_pkg/sources.yaml
+++ b/samples/init_collaboration/media_pkg/sources.yaml
@@ -32,10 +32,10 @@ sources:
           - std_dev
         selectable: true
         join_key: false
-    consumers_allowed: # who is allowed to use this source in transformation
+    transformation_owners_allowed: # who is allowed to use this source in transformation
       - Research
     destinations_allowed: 
-      - ref: /Research/transformation/private_total_customers 
+      - ref: /Research/destination/customer_overlap_count 
         noise_parameters: 
           - noiseType: Laplace
           - epsilon: math.Log(2) 
