--- a/.github/workflows/semantic_pr.yaml
+++ b/.github/workflows/semantic_pr.yaml
@@ -11,10 +11,12 @@ on:
       - ready_for_review
       - synchronize
 
+permissions: 
+  pull-requests: read
+
 jobs:
   main:
     name: Validate PR title
-    permissions: read-all
     runs-on: ubuntu-latest
     steps:
       - uses: amannn/action-semantic-pull-request@v5
@@ -36,13 +38,15 @@ jobs:
           # These are regex patterns auto-wrapped in `^ $`.
           scopes: |
             config
-            source 
-            transformation 
-            destination 
-            service 
+            source
+            transformation
+            destination
+            service
             address
             collaboration
             event
+            logger
+            error
           # Configure that a scope must always be provided.
           requireScope: false
           # Configure which scopes are disallowed in PR titles (newline-delimited).
@@ -69,4 +73,3 @@ jobs:
             doesn't start with an uppercase character.
           ignoreLabels: |
             bot
-            ignore-semantic-pull-request
