--- a/.github/workflows/semantic_pr.yaml
+++ b/.github/workflows/semantic_pr.yaml
@@ -11,14 +11,15 @@ on:
       - ready_for_review
       - synchronize
 
+permissions: 
+  pull-requests: read
+
 jobs:
   main:
     name: Validate PR title
-    permissions: read-all
     runs-on: ubuntu-latest
     steps:
-      -
-        uses: amannn/action-semantic-pull-request@v4
+      - uses: amannn/action-semantic-pull-request@v5
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
@@ -32,31 +33,40 @@ jobs:
             hotfix
             refactor
             test
-          requireScope: false
+            ci
+          # Configure which scopes are allowed (newline-delimited).
+          # These are regex patterns auto-wrapped in `^ $`.
+          # Configure that a scope must always be provided.
+          requireScope: false          
+          scopes: |
+            config
+            source
+            transformation
+            destination
+            service
+            address
+            collaboration
+            event
+            logger
+            error
+            dp 
+            intelsgx
+          # Configure which scopes are disallowed in PR titles (newline-delimited).
+          # For instance by setting the value below, `chore(release): ...` (lowercase)
+          # and `ci(e2e,release): ...` (unknown scope) will be rejected.
+          # These are regex patterns auto-wrapped in `^ $`.
+          disallowScopes: |
+            release
+            [A-Z]+
+          # Configure additional validation for the subject based on a regex.
+          # This example ensures the subject doesn't start with an uppercase character.
           subjectPattern: ^(?![A-Z]).+$
+          # If `subjectPattern` is configured, you can use this property to override
+          # the default error message that is shown when the pattern doesn't match.
+          # The variables `subject` and `title` can be used within the message.
           subjectPatternError: |
             The subject "{subject}" found in the pull request title "{title}"
             didn't match the configured pattern. Please ensure that the subject
             doesn't start with an uppercase character.
-          # For work-in-progress PRs you can typically use draft pull requests
-          # from GitHub. However, private repositories on the free plan don't have
-          # this option and therefore this action allows you to opt-in to using the
-          # special "[WIP]" prefix to indicate this state. This will avoid the
-          # validation of the PR title and the pull request checks remain pending.
-          # Note that a second check will be reported if this is enabled.
-          wip: true
-          # When using "Squash and merge" on a PR with only one commit, GitHub
-          # will suggest using that commit message instead of the PR title for the
-          # merge commit, and it's easy to commit this by mistake. Enable this option
-          # to also validate the commit message for one commit PRs.
-          validateSingleCommit: false
-          # Related to `validateSingleCommit` you can opt-in to validate that the PR
-          # title matches a single commit to avoid confusion.
-          validateSingleCommitMatchesPrTitle: false
-          # If the PR contains one of these labels, the validation is skipped.
-          # Multiple labels can be separated by newlines.
-          # If you want to rerun the validation when labels change, you might want
-          # to use the `labeled` and `unlabeled` event triggers in your workflow.
           ignoreLabels: |
             bot
-            dependencies
